@@ -10,7 +10,7 @@
 
   $Id$
   
-  June 14, 2002 - April 5, 2008
+  June 14, 2002 - September 22, 2008
 */
 
 
@@ -128,7 +128,7 @@ extern char *langstr;
 extern int need_own_font;
 extern int need_right_to_left; // Right-justify
 extern int need_right_to_left_word; // Words need to be reversed, too! (e.g., Hebrew, but not Arabic)
-extern const char *lang_prefix;
+extern const char *lang_prefix, *short_lang_prefix;
 extern const language_to_locale_struct language_to_locale_array[];
 
 
